# steamreleasecalendar

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: generate-calendar.yml
src/steamreleasecalendar/: main.py
